@@ -71,6 +71,7 @@ class Flonum;
 class Bignum;
 class Compnum;
 class VM;
+class Port;
 
 enum {
     CONST_NIL     = 0,
@@ -180,7 +181,7 @@ public:
     static Object makeStringInputPort(const uint8_t* buf, int size);
     static Object makeStringOutputPort();
     static Object makeTextualByteVectorOuputPort(Transcoder* transcoder);
-    static Object makeCustomBinaryInputPort(VM* theVM, Object readProc);
+    static Object makeCustomBinaryInputPort(VM* theVM, Object readProc, Object getPositionProc, Object setPositionProc, Object closeProc);
     static Object makeString(int n, ucs4char c = ' ');
     static Object makeClosure(Object* pc,
                               int size,
@@ -243,6 +244,8 @@ public:
         MOSH_ASSERT(is##type());                                                 \
         return reinterpret_cast<type*>(reinterpret_cast<HeapObject*>(val)->obj); \
     }
+
+    DECL_TO(Port)
 
 #define DECL_IS(tp)                                                        \
     bool is##tp() const                                                    \
