@@ -69,13 +69,14 @@ public:
     Transcoder* transcoder() const;
     bool hasPosition() const { return true; }
     bool hasSetPosition() const { return true; }
-    int position() const {
+    Object position() const {
         MOSH_ASSERT(false);
-        return 0;
+        return Object::Undef;
     }
     bool setPosition(int position)
     {
         MOSH_ASSERT(false);
+        return 0;
     }
 
 
