@@ -41,8 +41,8 @@
            (lambda () pos)
            (lambda (p) (set! pos p))
            (lambda () 'ok))])
-;  (test/t (port-has-port-position? p))
-;  (test/t (port-has-set-port-position!? p))
+  (test/t (port-has-port-position? p))
+  (test/t (port-has-set-port-position!? p))
 ;  (test* (port-position p) 0)
 ;  (test* (get-bytevector-n p 3) #vu8(1 2 3))
 ;  (test* (port-position p) 3)
